# Rust

./: .gitignore  .markdownlint.json  Projects.md  README.md  System-Prompt.md
Code/benchmarker/: Cargo.toml  README.md
Code/benchmarker/src/: main.rs
Code/file-commander/: Cargo.toml  README.md
Code/file-commander/src/: main.rs
Code/greeter/: Cargo.toml  README.md
Code/greeter/src/: main.rs
Code/hello-world-cli/: Cargo.toml  README.md
Code/hello-world-cli/src/: main.rs
Code/net-commander/: Cargo.toml  README.md
Code/net-commander/src/: main.rs
Code/reminder-app-cli/: Cargo.toml
Code/reminders-cli/: Cargo.toml  README.md
Code/reminders-cli/src/: main.rs
Code/rust-top/: Cargo.toml  README.md
Code/rust-top/src/: main.rs
Code/secure-notes/: Cargo.toml  README.md  secure_notes.json.enc
Code/secure-notes/src/: main.rs
Code/user-greeter/: Cargo.toml  README.md
Code/user-greeter/src/: main.rs
Code/weather-cli/: Cargo.toml  README.md
Code/weather-cli/src/: main.rs
Wiki/: README.md-Writer.md  System-Prompt.md
Wiki/Learning/: Cheat Sheet.md
Wiki/Prompts/: README.md-Writer.md  Rust-CLI-System-Prompt.md  Rust-System-Prompt.md
