[package]
name = "greeter"
version = "0.1.0"
edition = "2021"
description = "A simple TUI Hello World example using Clap, Crossterm, and Ratatui."
license = "MIT"
repository = "https://github.com/dunamismax/Rust"
readme = "README.md"
homepage = "https://github.com/dunamismax/Rust"
documentation = "https://github.com/dunamismax/Rust/Code/greeter"
keywords = ["tui", "rust"]
categories = ["command-line-utilities", "text-user-interface"]

[dependencies]
anyhow = "*"
crossterm = "*"
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
ratatui = "*"

[profile.release]
opt-level = 3
debug = false
lto = true
