[package]
name = "reminders-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
chrono = { version = "*", features = ["serde"] }
crossterm = "*"
dirs = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
tui = "*"