[package]
name = "rust-top"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A TUI-based Task Manager for Linux written in Rust."

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
crossterm = "*"
ratatui = "*"
tokio = { version = "*", features = ["full"] }

[profile.release]
# Typical release profile optimizations
opt-level = 3
lto = true
debug = false
