[package]
name = "rust-top"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A TUI-based Task Manager for Linux written in Rust."
repository = "https://github.com/dunamismax/Rust"
readme = "README.md"
homepage = "https://github.com/dunamismax/Rust"
documentation = "https://github.com/dunamismax/Rust/Code/rust-top"
keywords = ["tui", "rust", "task-manager"]
categories = ["command-line-utilities", "text-user-interface"]

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
crossterm = "*"
ratatui = "*"
tokio = { version = "*", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
debug = false
