[package]
name = "secure-notes"
version = "0.1.0"
edition = "2021"
description = "A secure notes manager with encryption, using ratatui for TUI."
license = "MIT"
repository = "https://github.com/Rust"
readme = "README.md"
homepage = "https://github.com/Rust"
documentation = "https://github.com/dunamismax/Rust/Code/secure-notes"

[dependencies]
# Async runtime
tokio = { version = "*", features = ["full"] }

# TUI + Terminal handling
ratatui = "*"
crossterm = "*"

# Argument parsing
clap = { version = "*", features = ["derive"] }

# Error handling
anyhow = "*"

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Cryptography & Security
ring = "*"
base64 = "*"
zeroize = "*"
rand = "*"

[profile.release]
opt-level = 3
debug = false
lto = true
