[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"
description = "Ratatui-based Weather CLI"
license = "MIT"
repository = "https://github.com/dunamismax/Rust"
documentation = "https://github.com/dunamismax/Rust/Code/weather-cli"
readme = "README.md"
keywords = ["weather", "cli", "ratatui"]
categories = ["command-line-utilities", "text-user-interface"]

[dependencies]
# Networking and data
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
dotenv = "*"
chrono = "*"
figlet-rs = "*"

# CLI + TUI
clap = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
ratatui = "*"
crossterm = "*"

[profile.release]
opt-level = 3
debug = false
lto = true
